2006-12-07  Andrew Macleod  <amacleod@redhat.com>

	* expr.c (string_constant): Account for non-zero lower bound arrays.

2006-12-07  Richard Guenther  <rguenther@suse.de>

	* builtins.c (expand_builtin_pow): Adjust predicates for
	pow to cbrt expansion to unsafe math and !HONOR_NANS for
	negative base.

2006-12-07  Jan Hubicka  <jh@suse.cz>

	* i386.c (nocona_cost, pentium4_cost): Update preffered memcpy/memset
	codegen.

2006-12-07  Jan Hubicka  <jh@suse.cz>

	* tree-vrp.c (compare_values): Short circuit INTEGER_CST;
	use fold_constant_to_binary; tolerate wrong type constants.
	(value_intersect_p): Do just two tests.

2006-12-07  Bernd Schmidt  <bernd.schmidt@analog.com>

	* config/bfin/bfin.c (print_operand): New modifier 'N' for constants.
	* config/bfin/bfin.md (ssashiftv2hi3, ssashifthi3, lshiftv2hi3,
	lshifthi3): Use it, and fix the order of alternatives.

2006-12-07  Nick Clifton  <nickc@redhat.com>

	* common.opt (record-gcc-switches): New command line switch.
	* target.h (print_switch_type): New enum.
	(print_switch_fn_type): New typedef for a function pointer.
	(struct gcc_target): Add record_gcc_switches and
	record_gcc_switches_section fields.
	* target-def.h (TARGET_ASM_RECORD_GCC_SWITCHES): Provide a
        default definition.
	(TARGET_ASM_RECORD_GCC_SWITCHES_SECTION): Provide a default
	definition.
	* toplev.c (print_single_switch): Simplify by providing a
	pointer to function that will format and output the switch
	appropriately.
	(print_switch_values): Likewise.
	(print_to_asm_out_file): New function.
	(print_to_stderr): New function.
	(init_asm_output): If flag_record_gcc_switches is set then if
        the target supports recording the switches then emit them into
        the assembler output file, otherwise tell the user that the
        switch is not supported.
	* varasm.c (eld_record_gcc_switches): New function.  Example
	handler for the record_gcc_switches target hook.
	* doc/tm.texi (TARGET_ASM_RECORD_GCC_SWITCHES): Document the new