@@ -1,3 +1,8 @@
+2006-12-07  Nick Clifton  <nickc@redhat.com>
+
+	* config/elfos.h (TARGET_ASM_RECORD_GCC_SWITCHES): Set to
+	elf_record_gcc_switches.
+
 2006-12-07  Andrew Macleod  <amacleod@redhat.com>
 
 	* expr.c (string_constant): Account for non-zero lower bound arrays.
